[package]
name = "aquarium"
version = "0.1.0"
authors = ["Vova Auer"]
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'console',
    'CanvasGradient',
    'MouseEvent'
]}
js-sys = "0.3.77"
getrandom = { version = "0.2.12", features = ["js"] }
rand = "0.8.5"
console_error_panic_hook = "0.1.7"